Fixed some warnings and style problems